--- a/candies.html
+++ b/candies.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>candies</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,33 +80,33 @@
             <img src="ad33921d268aa3a64c61.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">CANDIES APRICCI</h1>
+            <h1 class="product__name lang__product__page" key="candies__name1">CANDIES APRICCI</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">An amazing delicacy of walnuts and dried apricots under the chocolate glaze will not leave anyone indifferent. These candies are carry an indispensable benefit to the body!</p>
+              <p class="product__article class__for__animation lang__product__page" key="candies__article1">An amazing delicacy of walnuts and dried apricots under the chocolate glaze will not leave anyone indifferent. These candies are carry an indispensable benefit to the body!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.7">7.7g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:19.6">19.6g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:38.9">38.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="energy__value">Energy value: 360.7g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="energy__value lang__product__page" key="candies__energy__value">Energy value: 360.7g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -116,33 +116,33 @@
             <img src="c65d71e907ab51948dec.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">CANDIES BRUNI</h1>
+            <h1 class="product__name lang__product__page" key="candies__name2">CANDIES BRUNI</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Traditional soft candy with roasted nuts covered in glaze in the best performance of the familiar and favorite taste is a joy for everyone!</p>
+              <p class="product__article class__for__animation lang__product__page" key="candies__article2">Traditional soft candy with roasted nuts covered in glaze in the best performance of the familiar and favorite taste is a joy for everyone!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.7">7.7g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:19.6">19.6g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:38.9">38.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="energy__value">Energy value: 360.7g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="energy__value lang__product__page" key="candies__energy__value">Energy value: 360.7g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -152,33 +152,33 @@
             <img src="66488cdd86c0fd69aaa2.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">CANDIES MELLORA</h1>
+            <h1 class="product__name lang__product__page" key="candies__name3">CANDIES MELLORA</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">A sweet flavor of melon and walnut covered with dark glaze is collected in candy. The intertwining of the oriental taste and the taste of walnut, familiar to everyone since childhood, forms a wonderful, unique taste that even experienced sweet-tooths will appreciate!</p>
+              <p class="product__article class__for__animation lang__product__page" key="candies__article3">A sweet flavor of melon and walnut covered with dark glaze is collected in candy. The intertwining of the oriental taste and the taste of walnut, familiar to everyone since childhood, forms a wonderful, unique taste that even experienced sweet-tooths will appreciate!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.7">7.7g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:19.6">19.6g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:38.9">38.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="energy__value">Energy value: 360.7g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="energy__value lang__product__page" key="candies__energy__value">Energy value: 360.7g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -188,33 +188,33 @@
             <img src="fcf3f0859e3ad7d4bd1e.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">CANDIES NEGRITTA</h1>
+            <h1 class="product__name lang__product__page" key="candies__name4">CANDIES NEGRITTA</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Whole dried prunes with walnuts, covered with chocolate glaze. Legendary sweets are well suited as a treat for guests, decorate the festive table and will simply delight lovers of sweets!</p>
+              <p class="product__article class__for__animation lang__product__page" key="candies__article4">Whole dried prunes with walnuts, covered with chocolate glaze. Legendary sweets are well suited as a treat for guests, decorate the festive table and will simply delight lovers of sweets!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.7">7.7g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:19.6">19.6g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:38.9">38.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="energy__value">Energy value: 360.7</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="energy__value lang__product__page" key="candies__energy__value">Energy value: 360.7</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
