--- a/cornStick.html
+++ b/cornStick.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>cornStick</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="df5469005b68095d8eab.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Corn sticks «Chrunching» with nutella</h1>
+            <h1 class="product__name lang__product__page" key="corn__stick__name1">Corn sticks «Chrunching» with nutella</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Familiar from childhood, delicious and satisfying corn sticks, and today with an abundance of flavors, like Nutella and Rafaello, which you always need to buy more, because enjoying them is hard to stop!</p>
+              <p class="product__article class__for__animation lang__product__page" key="corn__stick__article1">Familiar from childhood, delicious and satisfying corn sticks, and today with an abundance of flavors, like Nutella and Rafaello, which you always need to buy more, because enjoying them is hard to stop!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:4.2">4.2g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:25.4">25.4g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:61.2">61.2g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 490g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="corn__stick__energy__value1">Energy value: 490g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="df5469005b68095d8eab.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Corn sticks «Chrunching» with rafaello</h1>
+            <h1 class="product__name lang__product__page" key="corn__stick__name2">Corn sticks «Chrunching» with rafaello</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Familiar from childhood, delicious and satisfying corn sticks, and today with an abundance of flavors, like Nutella and Rafaello, which you always need to buy more, because enjoying them is hard to stop!</p>
+              <p class="product__article class__for__animation lang__product__page" key="corn__stick__article2">Familiar from childhood, delicious and satisfying corn sticks, and today with an abundance of flavors, like Nutella and Rafaello, which you always need to buy more, because enjoying them is hard to stop!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:4.2">4.2g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:25.4">25.4g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:61.2">61.2g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 490g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="corn__stick__energy__value2">Energy value: 490g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
