--- a/cupcake.html
+++ b/cupcake.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>cupcake</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="6288f0f34655807b9a1a.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cupcake «DOMASHNII»</h1>
+            <h1 class="product__name lang__product__page" key="cupcake__name1">Cupcake «DOMASHNII»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Today this sweet pastry is served with tea and consumed for breakfast, taken on the road and prepared for a special occasion. In addition to a delicate and pleasant aroma, cupcakes also have some useful properties, they are recommended for children who need enhanced nutrition.</p>
+              <p class="product__article class__for__animation lang__product__page" key="cupcake__aticle1">Today this sweet pastry is served with tea and consumed for breakfast, taken on the road and prepared for a special occasion. In addition to a delicate and pleasant aroma, cupcakes also have some useful properties, they are recommended for children who need enhanced nutrition.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.05">6.05g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:16.8">16.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:57.9">57.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 406.9g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="cupcake__energy__value1">Energy value: 406.9g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="e48af239b08d83f53ec0.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cupcake «RANKOVYI»</h1>
+            <h1 class="product__name lang__product__page" key="cupcake__name2">Cupcake «RANKOVYI»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Incredibly crumbled, delicate cupcake with raisins, decorated with powdered sugar … it is impossible to refuse such a delicacy …</p>
+              <p class="product__article class__for__animation lang__product__page" key="cupcake__article2">Incredibly crumbled, delicate cupcake with raisins, decorated with powdered sugar … it is impossible to refuse such a delicacy …</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.1">6.1g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:16.8">16.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:57.9">57.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 406.9g</span>
+                  <span class="shelf__life  lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="cupcake__energy__value2">Energy value: 406.9g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
