--- a/custard.html
+++ b/custard.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>custard</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="89c340b1b9c9828c8d82.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Custard cake «with condensed boiled milk»</h1>
+            <h1 class="product__name lang__product__page" key="custard__name1">Custard cake «with condensed boiled milk»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Airy cream with a large amount of boiled condensed milk in combination with a surface covered with condensed milk and chocolate glaze will delight a sweet tooth with a rich taste.</p>
+              <p class="product__article class__for__animation lang__product__page" key="custard__article1">Airy cream with a large amount of boiled condensed milk in combination with a surface covered with condensed milk and chocolate glaze will delight a sweet tooth with a rich taste.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:9">9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5">5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:78.1">78.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 394,3</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="custard__energy__value1">Energy value: 394,3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="c9e142875d1899d2aa8a.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Custard cakes «IRISKA»</h1>
+            <h1 class="product__name lang__product__page" key="custard__name2">Custard cakes «IRISKA»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Delicate airy cream of whipped cream and boiled condensed milk goes incredibly well with boiled condensed milk on the surface, and sprinkled with pieces of white chocolate on top. It is the perfect addition to your tea party.</p>
+              <p class="product__article class__for__animation lang__product__page" key="custard__article2">Delicate airy cream of whipped cream and boiled condensed milk goes incredibly well with boiled condensed milk on the surface, and sprinkled with pieces of white chocolate on top. It is the perfect addition to your tea party.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:9">9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5">5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:78.1">78.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 394,3</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="custard__energy__value2">Energy value: 394,3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -154,34 +154,34 @@
             <img src="04793efa5bbe2f902795.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Custard cakes «PREMIUM»</h1>
+            <h1 class="product__name lang__product__page" key="custard__name3">Custard cakes «PREMIUM»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Supporters of the classic Soviet standard butter cream will love a cream based on natural, fresh peasant butter, whipped with powdered sugar and white condensed milk.</p>
+              <p class="product__article class__for__animation lang__product__page" key="custard__article3">Supporters of the classic Soviet standard butter cream will love a cream based on natural, fresh peasant butter, whipped with powdered sugar and white condensed milk.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:9">9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5">5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:78.1">78.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 394,3</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="custard__energy__value3">Energy value: 394,3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -191,34 +191,34 @@
             <img src="dc07ae666cff72e9124b.png" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Custard cakes «SMACHNENKE»</h1>
+            <h1 class="product__name lang__product__page" key="custard__name4">Custard cakes «SMACHNENKE»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">The combination of black glaze with delicate airy cream and a small amount of white condensed milk will pleasantly surprised all fans of the classic choux pastry.</p>
+              <p class="product__article class__for__animation lang__product__page" key="custard__article4">The combination of black glaze with delicate airy cream and a small amount of white condensed milk will pleasantly surprised all fans of the classic choux pastry.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:9">9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5">5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:78.1">78.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 394,3</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="custard__energy__value4">Energy value: 394,3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation" key="product__info__more">more</div>
             </div>
           </div>
         </div>
