--- a/gingerbread.html
+++ b/gingerbread.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>gingerbread</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="5a71dd41a6fb192b1f71.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Gingerbread products «BATONCHIK» with filler and banana flavor</h1>
+            <h1 class="product__name lang__product__page" key="gin__name1">Gingerbread products «BATONCHIK» with filler and banana flavor</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">What could be better than fresh, fragrant gingerbread with added fruit. Tasty, healthy, nice!</p>
+              <p class="product__article class__for__animation lang__product__page" key="gin__article1">What could be better than fresh, fragrant gingerbread with added fruit. Tasty, healthy, nice!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5.2">5.2g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5.1">5.1g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
-                    <div class="circle-diagram" style="--percent:74.3">74.3g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <div class="circle-diagram lang__product__page" style="--percent:74.3">74.3g</div>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 366.9g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="gin__energy__value1">Energy value: 366.9g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="630894effde93b029be8.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Gingerbread products «RYZHYK» with raspberry flavor</h1>
+            <h1 class="product__name lang__product__page" key="gin__name2">Gingerbread products «RYZHYK» with raspberry flavor</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">What could be better than fresh, fragrant gingerbread with added fruit. Tasty, healthy, nice!</p>
+              <p class="product__article class__for__animation lang__product__page" key="gin__article2">What could be better than fresh, fragrant gingerbread with added fruit. Tasty, healthy, nice!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5">5g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:4">4g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:66.1">66.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 320g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="gin__energy__value2">Energy value: 320g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -154,34 +154,34 @@
             <img src="ded214e5c21ff64f02f0.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Gingerbread products «Chocolate taste»</h1>
+            <h1 class="product__name lang__product__page" key="gin__name3">Gingerbread products «Chocolate taste»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">The main place on the festive table has always been occupied by His Majesty Gingerbread – whose taste variety was limitless. Because of that the chocolate flavor of the gingerbread is so liked by many generations!</p>
+              <p class="product__article class__for__animation lang__product__page" key="gin__article3">The main place on the festive table has always been occupied by His Majesty Gingerbread – whose taste variety was limitless. Because of that the chocolate flavor of the gingerbread is so liked by many generations!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.2">6.2g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.8">6.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:70.8">70.8g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 46</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 370.2g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life45">Shelf life: 45</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="gin__energy__value3">Energy value: 370.2g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -191,34 +191,34 @@
             <img src="95aa9b80ec0a1774f0f8.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Gingerbread products «DNESTROVSKIY»</h1>
+            <h1 class="product__name lang__product__page" key="gin__name4">Gingerbread products «DNESTROVSKIY»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Gingerbread is an old delicacy, the recipe of which is lost in the age-old traditions. And today, the gingerbread is considered a national symbol, the embodiment of generosity, kindness, spiritual purity and health!</p>
+              <p class="product__article class__for__animation lang__product__page" key="gin__article4">Gingerbread is an old delicacy, the recipe of which is lost in the age-old traditions. And today, the gingerbread is considered a national symbol, the embodiment of generosity, kindness, spiritual purity and health!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5.5">5.5g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6">6g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:74.8">74.8g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 45</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 375.8g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life45">Shelf life: 45</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="gin__energy__value4">Energy value: 375.8g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
