--- a/oatmeal.html
+++ b/oatmeal.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>oaemeal</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="5677acd15c397e2d1f93.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">OATMEAL COOKIES «CLASSIC»</h1>
+            <h1 class="product__name lang__product__page" key="oatmeal__name1">OATMEAL COOKIES «CLASSIC»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Traditional cookies, which are made according to the classic recipe from natural ingredients, providing not only high biological value of the product, but also guaranteeing a unique taste to which we are used to since childhood!</p>
+              <p class="product__article class__for__animation lang__product__page" key="oatmeal__article1">Traditional cookies, which are made according to the classic recipe from natural ingredients, providing not only high biological value of the product, but also guaranteeing a unique taste to which we are used to since childhood!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6">6g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:15">15g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:71.5">71.5g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrate lang__product__pages" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 444.4g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="oatmeal__energy__value1">Energy value: 444.4g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="31785f1a2896fb5aca91.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">OATMEAL COOKIES «ELITE»</h1>
+            <h1 class="product__name lang__product__page" key="oatmeal__name2">OATMEAL COOKIES «ELITE»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Favorite oatmeal cookies become even tastier with the addition of chocolate pieces, giving the familiar taste to unique sweet notes!</p>
+              <p class="product__article class__for__animation lang__product__page" key="oatmeal__article2">Favorite oatmeal cookies become even tastier with the addition of chocolate pieces, giving the familiar taste to unique sweet notes!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5.9">5.9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:16.5">16.5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:68.9">68.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 447.5g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="oatmeal__energy__value2">Energy value: 447.5g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -154,34 +154,34 @@
             <img src="c6dfead2f6b69a44e6fa.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">OATMEAL COOKIES «with cereals»</h1>
+            <h1 class="product__name lang__product__page" key="oatmeal__name3">OATMEAL COOKIES «with cereals»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Roasted peanuts and flax seeds make traditional oatmeal cookies more tastier, healthier and enjoyable!</p>
+              <p class="product__article class__for__animation lang__product__page" key="oatmeal__article3">Roasted peanuts and flax seeds make traditional oatmeal cookies more tastier, healthier and enjoyable!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.4">7.4g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:16.5">16.5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:67.4">67.4g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 445.3g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="oatmeak__energy__value3">Energy value: 445.3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -191,34 +191,34 @@
             <img src="42366c957c3e72b681fa.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">OATMEAL COOKIES «with cereals»</h1>
+            <h1 class="product__name lang__product__page" key="oatmeal__name4">OATMEAL COOKIES «with cereals»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Roasted peanuts and flax seeds make traditional oatmeal cookies more tastier, healthier and enjoyable!</p>
+              <p class="product__article class__for__animation  lang__product__page" key="oatmeal__article4">Roasted peanuts and flax seeds make traditional oatmeal cookies more tastier, healthier and enjoyable!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content  lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.4">7.4g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:16.5">16.5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:67.4">67.4g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 445.3g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="oatmeal__energy__value4">Energy value: 445.3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
