--- a/shortbread.html
+++ b/shortbread.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>shortbread</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="57cd8bb4718601e81cd5.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cookies «LASUNCHIK apple&cinnamon»</h1>
+            <h1 class="product__name lang__product__page" key="short__name1">Cookies «LASUNCHIK apple&cinnamon»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">A green apple with sourness and subtle notes of cinnamon will give your beloved cookies a unique taste, and tea drinking with it can be endlessly enjoyable!</p>
+              <p class="product__article class__for__animation lang__product__page" key="short__article1">A green apple with sourness and subtle notes of cinnamon will give your beloved cookies a unique taste, and tea drinking with it can be endlessly enjoyable!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.1">6.1g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:15.8">15.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:65.1">65.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 424.9g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="short__energy__value1">Energy value: 424.9g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="013a8a965b80daed3055.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cookies «LASUNCHIK cherry»</h1>
+            <h1 class="product__name lang__product__page" key="short__name2">Cookies «LASUNCHIK cherry»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Cherry is a delicious juicy berry, with its help a huge amount of various pastries is created. One of the good example is our product. You can verify this only by tasting them!</p>
+              <p class="product__article class__for__animation lang__product__page" key="short__article2">Cherry is a delicious juicy berry, with its help a huge amount of various pastries is created. One of the good example is our product. You can verify this only by tasting them!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.1">6.1g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:15.8">15.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:64.5">64.5g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 424.4g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="short__energy__value2">Energy value: 424.4g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -154,34 +154,34 @@
             <img src="236fef722705c34fa5fb.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cookies «LASUNCHIK CITRUS»</h1>
+            <h1 class="product__name lang__product__page" key="short__name3">Cookies «LASUNCHIK CITRUS»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Subtle notes of sourness give your favorite cookies a unique taste, and tea with it can be infinitely pleasant!</p>
+              <p class="product__article class__for__animation lang__product__page" key="short__article3">Subtle notes of sourness give your favorite cookies a unique taste, and tea with it can be infinitely pleasant!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.1">6.1g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:15.8">15.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:64.4">64.4g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 424.4g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="short__energy__value3">Energy value: 424.4g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
