--- a/sugar.html
+++ b/sugar.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>sugar</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="980cebcc88a6baaded97.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cookies «DNISTROVSKE»</h1>
+            <h1 class="product__name lang__product__page" key="sugar__name1">Cookies «DNISTROVSKE»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Cookies «DNISTROVSKE» is a very tasty, go well with tea or coffee and they are eaten very quickly.</p>
+              <p class="product__article class__for__animation lang__product__page" key="sugar__article1">Cookies «DNISTROVSKE» is a very tasty, go well with tea or coffee and they are eaten very quickly.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:8.3">8.3g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:11">11g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:71">71g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 416g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="sugar__energy__value1">Energy value: 416g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="7cc1866053c9af65810b.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Cookies «RETRO»</h1>
+            <h1 class="product__name lang__product__page" key="sugar__name2">Cookies «RETRO»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">An invariable and tasty memory from childhood, its pleasant sweet taste is liked by both the older and younger generations.</p>
+              <p class="product__article class__for__animation lang__product__page" key="sugar__article2">An invariable and tasty memory from childhood, its pleasant sweet taste is liked by both the older and younger generations.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.8">7.8g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:12.9">12.9g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:69">69g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 423g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="sugar__energy__value2">Energy value: 423g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
