--- a/sweet.html
+++ b/sweet.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>sweet</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="99d247647b493d39ab6f.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">KORZHYK «DYTIACHYI» Pink,White</h1>
+            <h1 class="product__name lang__product__page" key="sweet__name1">KORZHYK «DYTIACHYI» Pink,White</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Remember how delicious tortillas were in our childhood? If you want to remember this taste and find yourself in childhood for a moment, then you should definitely try them!</p>
+              <p class="product__article class__for__animation lang__product__page" key="sweet__article1">Remember how delicious tortillas were in our childhood? If you want to remember this taste and find yourself in childhood for a moment, then you should definitely try them!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5.2">5.2g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:29.8">29.8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:61.7">61.7g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 529.8</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="sweet__energy__value1">Energy value: 529.8g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="99d247647b493d39ab6f.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">KORZHYK «DYTIACHYI» White</h1>
+            <h1 class="product__name lang__product__page" key="sweet__name2">KORZHYK «DYTIACHYI» White</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Remember how delicious tortillas were in our childhood? If you want to remember this taste and find yourself in childhood for a moment, then you should definitely try them!</p>
+              <p class="product__article class__for__animation lang__product__page" key="sweet__article2">Remember how delicious tortillas were in our childhood? If you want to remember this taste and find yourself in childhood for a moment, then you should definitely try them!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5,2">5,2g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:29,8">29,8g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:61,7">61,7g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 529,8g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="sweet__energy__value2">Energy value: 529,8g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -154,34 +154,34 @@
             <img src="2e4cd0ce972cbb2198e1.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">KORZHYK «SHKILNYI»</h1>
+            <h1 class="product__name lang__product__page" key="sweet__name3">KORZHYK «SHKILNYI»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Those who grew up in the Soviet Union remember these delicious cakes in school canteens. For those who were born later, we strongly recommend getting to know this wonderful pastry.</p>
+              <p class="product__article class__for__animation lang__product__page" key="sweet__article3">Those who grew up in the Soviet Union remember these delicious cakes in school canteens. For those who were born later, we strongly recommend getting to know this wonderful pastry.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5,9">5,9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:28,5">28,5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:63,9">63,9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 531,8п</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="sweet__energy__value3">Energy value: 531,8g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -191,34 +191,34 @@
             <img src="442791ccfe21c379c57c.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">KORZHYK «STUDENSKYI»</h1>
+            <h1 class="product__name lang__product__page" key="sweet__name4">KORZHYK «STUDENSKYI»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Another favorite GOST. Another delicious treat for a hearty tea party.</p>
+              <p class="product__article class__for__animation lang__product__page" key="sweet__article4">Another favorite GOST. Another delicious treat for a hearty tea party.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.1">6.1g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:29.1">29.1g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:61.7">61.7g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 60</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 531.6g</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life60">Shelf life: 60</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="sweet__energy__value4">Energy value: 531.6g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
