--- a/wheat.html
+++ b/wheat.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>wheat</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="05d5d757772a875678a3.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Wheat rusk «Stolychni» with raisins</h1>
+            <h1 class="product__name lang__product__page" key="wheat__name1">Wheat rusk «Stolychni» with raisins</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Nowadays, a large variety of flavoring ingredients and additives are presented on the market, but raisins are classics. Rusk with raisins contains selected specimens of the highest grade and the best quality, and their uniform spreading provides a special taste of the finished product!</p>
+              <p class="product__article class__for__animation lang__product__page" key="wheat__article1">Nowadays, a large variety of flavoring ingredients and additives are presented on the market, but raisins are classics. Rusk with raisins contains selected specimens of the highest grade and the best quality, and their uniform spreading provides a special taste of the finished product!</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:9">9g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:5">5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:78.1">78.1g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
-                <span class="energy__value">Energy value: 394,3</span>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 180</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="shelf__life lang__product__page" key="shelf__life180">Shelf life: 180</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="wheat__energy__value1">Energy value: 394,3g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
