--- a/biscuit.html
+++ b/biscuit.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <title>biscuit</title>
-<script defer src="polyfill.7e7587fed84314805822.js"></script><script defer src="app.7e7587fed84314805822.js"></script><link href="./style.css" rel="stylesheet"></head>
+<script defer src="polyfill.ebdf6dcd91ddc637efb1.js"></script><script defer src="app.ebdf6dcd91ddc637efb1.js"></script><link href="./style.css" rel="stylesheet"></head>
 <body>
   <div class="preloader">
     <div class="preloader__row">
@@ -80,34 +80,34 @@
             <img src="855555d07ffb0f16a521.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Biscuit-cream corner cake</h1>
+            <h1 class="product__name lang__product__page" key="biscuit__name1">Biscuit-cream corner cake</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Biscuit semi-finished products soaked in sugar syrup and smeared with butter cream with the addition of confectionery chocolate glaze are great.</p>
+              <p class="product__article class__for__animation lang__product__page" key="biscuit__articlle1">Biscuit semi-finished products soaked in sugar syrup and smeared with butter cream with the addition of confectionery chocolate glaze are great.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.4">7.4g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:21.9">21.9g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:48">48g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 15</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 417</span>
+                  <span class="shelf__life lang__product__page" key="biscuit__shelf__life">Shelf life: 15</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="biscuit__energy__value1">Energy value: 417g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -117,34 +117,34 @@
             <img src="0e0434f95e5945dd64b7.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Buscuit corner cake «NUTLET»</h1>
+            <h1 class="product__name lang__product__page" key="biscuit__name2">Buscuit corner cake «NUTLET»</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Biscuit cakes soaked in sugar syrup, smeared with butter cream whipped with powdered sugar and sprinkled with roasted peanuts will leave an unforgettable aftertaste.</p>
+              <p class="product__article class__for__animation lang__product__page" key="biscuit__article2">Biscuit cakes soaked in sugar syrup, smeared with butter cream whipped with powdered sugar and sprinkled with roasted peanuts will leave an unforgettable aftertaste.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:6.8">6.8g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:14.5">14.5g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:55.6">55.6g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 15</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 379.1g</span>
+                  <span class="shelf__life lang__product__page" key="biscuit__shelf__life">Shelf life: 15</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="biscuit__energy__value2">Energy value: 379.1g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
@@ -154,34 +154,34 @@
             <img src="15aee52eba92478fed45.jpg" alt="">
           </div>
           <div class="product__info">
-            <h1 class="product__name">Buscuit corner cake with condensed boiled milk</h1>
+            <h1 class="product__name lang__product__page" key="biscuit__name3">Buscuit corner cake with condensed boiled milk</h1>
             <div class="product__description">
-              <p class="product__article class__for__animation">Sponge cakes soaked in sugar syrup, smeared with cream from condensed boiled milk, create a wonderful taste harmony.</p>
+              <p class="product__article class__for__animation lang__product__page" key="biscuit__article3">Sponge cakes soaked in sugar syrup, smeared with cream from condensed boiled milk, create a wonderful taste harmony.</p>
               <div class="more__information">
                 <div class="more__information__first__container class__for__animation">
-                  <span class="caloric__content">caloric content of 100g of product</span>
+                  <span class="caloric__content lang__product__page" key="caloric__content">caloric content of 100g of product</span>
                 <div class="product__diagram">
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:7.4">7.4g</div>
-                    <span class="proteins">Proteins</span>
+                    <span class="proteins lang__product__page" key="proteins">Proteins</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:11.4">11.4g</div>
-                    <span class="fats">Fats</span>
+                    <span class="fats lang__product__page" key="fats">Fats</span>
                   </div>
                   <div class="dig">
                     <div class="circle-diagram" style="--percent:55.9">55.9g</div>
-                    <span class="carbohydrates">Carbohydrates</span>
+                    <span class="carbohydrates lang__product__page" key="carbohydrates">Carbohydrates</span>
                   </div>
                 </div>
                 </div>
                 <div class="more__information__second__container class__for__animation">
-                  <span class="shelf__life">Shelf life: 15</span>
-                  <span class="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
-                  <span class="energy__value">Energy value: 354.9g</span>
+                  <span class="shelf__life lang__product__page" key="biscuit__shelf__life">Shelf life: 15</span>
+                  <span class="contains lang__product__page" key="contains">Contains: gluten, dairy and egg products, soya lecithin</span>
+                  <span class="energy__value lang__product__page" key="biscuit__energy__value3">Energy value: 354.9g</span>
                 </div>
               </div>
-              <div class="btn showMore class__for__animation">more</div>
+              <div class="btn showMore class__for__animation lang__product__page" key="product__info__more">more</div>
             </div>
           </div>
         </div>
